# ZipFly

./: .gitignore  MANIFEST.IN  README.md  dev-requirements.txt  prefetch.py  pyproject.toml
.github/workflows/: pypi-publish.yml  run-all-tests.yml  run-fast-tests.yml
src/zipFly/: BaseFile.py  Compressor.py  EmptyFolder.py  FilePrefetcher.py  GenFile.py  LocalFile.py  ZipBase.py  ZipFly.py  __init__.py  consts.py
tests/: test_utils.py  test_zipfly.py  test_zipfly_4GB.py
